added sql creator and display results on search page

--- a/search.html
+++ b/search.html
@@ -24,6 +24,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+    <script src="search.js"></script>
 </head>
 
 <body>
@@ -47,6 +48,9 @@
     <input class="form-control search mx-auto mt-4" type="text" placeholder="Search" aria-label="Search">
 
     <div id="results"></div>
+
+    <button id="prevpage" onclick="goToPrevPage()">Previous Page</button>
+    <button id="nextpage" onclick="goToNextPage()">Next Page</button>
 
     <footer class="page-footer font-small">
 
