--- a/search.html
+++ b/search.html
@@ -45,7 +45,7 @@
         </nav>
     </header>
     
-    <input class="form-control search mx-auto mt-4" type="text" placeholder="Search" aria-label="Search">
+    <input id="searchbar" class="form-control search mx-auto mt-4" type="text" placeholder="Search" aria-label="Search">
 
     <div id="results"></div>
 
