search is finished, start of pokemon details

--- a/pokemon.html
+++ b/pokemon.html
@@ -24,7 +24,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-    <script src="search.js"></script>
+    <script src="pokemon.js"></script>
 </head>
 
 <body>
@@ -45,12 +45,7 @@
         </nav>
     </header>
     
-    <input id="searchbar" class="form-control search mx-auto mt-4" type="text" placeholder="Search" aria-label="Search">
-
-    <div id="results">
-        <button id="prevpage" onclick="goToPrevPage()">Previous Page</button>
-        <button id="nextpage" onclick="goToNextPage()">Next Page</button>
-    </div>
+    
 
     <footer class="page-footer font-small">
 
