Beginnings of proteam page

--- a/proteam.html
+++ b/proteam.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Pokedex</title>
-    <meta name="description" content="Website for Will & Co. Cafe">
+    <meta name="description" content="Page for pro teams>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
@@ -24,7 +24,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-    <script src="search.js"></script>
+    <script src="proteam.js"></script>
 </head>
 
 <body>
@@ -39,8 +39,10 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="builder.html">Team Builder <span class="sr-only">(current)</span></a>
+
                 </li>
                 <li class="nav-item active">
+
                     <a class="nav-link" href="proteam.html">Pro Teams <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
@@ -48,12 +50,7 @@
         </nav>
     </header>
 
-    <input id="searchbar" class="form-control search mx-auto mt-4" type="text" placeholder="Search" aria-label="Search">
 
-    <div id="results">
-        <button id="prevpage" onclick="goToPrevPage()">Previous Page</button>
-        <button id="nextpage" onclick="goToNextPage()">Next Page</button>
-    </div>
 
     <footer class="page-footer font-small">
 
