--- a/pokemon.html
+++ b/pokemon.html
@@ -41,6 +41,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="builder.html">Team Builder <span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="proteam.html">Pro Teams <span class="sr-only">(current)</span></a>
+                </li>
             </ul>
             </div>
         </nav>
