added reset button

--- a/builder.html
+++ b/builder.html
@@ -55,7 +55,9 @@
             <td><h3 id="name6">Choose One:</h3><img onclick="choosePokemon(6)" id="pokemon6"></td>
         </tr>
     </table>
-    <button type="button">Reset</button>
+    <button type="button" onclick="clearChoices()">Reset</button>
+
+
     <footer class="page-footer font-small">
 
     </footer>
