added type suggestions

--- a/builder.html
+++ b/builder.html
@@ -56,8 +56,12 @@
         </tr>
     </table>
     <button type="button" onclick="clearChoices()">Reset</button>
-
-
+    <br><br>
+    <h3>Covered Types:</h3>
+    <h5 id="covered"></h5>
+    <br><br>
+    <h3>Uncovered Types:</h3>
+    <h5 id="uncovered"></h5>
     <footer class="page-footer font-small">
 
     </footer>
