Started adding proteam stuff

--- a/proteam.html
+++ b/proteam.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Pokedex</title>
-    <meta name="description" content="Page for pro teams>
+    <meta name="description" content="Page for pro teams">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
@@ -49,6 +49,8 @@
             </div>
         </nav>
     </header>
+
+
 
 
 
