--- a/proteam.html
+++ b/proteam.html
@@ -50,18 +50,10 @@
         </nav>
     </header>
 
-
     <p>
-      <table>
-        <tr>
-            <td><h3 id="name1">Choose One:</h3><img "choosePokemon(1)" id="pokemon1"></td>
-            <td><h3 id="name2">Choose One:</h3><img "choosePokemon(2)" id="pokemon2"></td>
-            <td><h3 id="name3">Choose One:</h3><img "choosePokemon(3)" id="pokemon3"></td>
-            <td><h3 id="name4">Choose One:</h3><img "choosePokemon(4)" id="pokemon4"></td>
-            <td><h3 id="name5">Choose One:</h3><img "choosePokemon(5)" id="pokemon5"></td>
-            <td><h3 id="name6">Choose One:</h3><img "choosePokemon(6)" id="pokemon6"></td>
-        </tr>
-    </table>
+      <table id = "proteamTable">
+
+      </table>
     </p>
 
 
