--- a/proteam.html
+++ b/proteam.html
@@ -51,7 +51,7 @@
     </header>
 
     <p>
-      <table id = "proteamTable">
+      <table class = "mx-auto" id = "proteamTable">
 
       </table>
     </p>
