--- a/builder.html
+++ b/builder.html
@@ -33,7 +33,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <img class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="builder.html">Team Builder <span class="sr-only">(current)</span></a>
@@ -42,7 +42,7 @@
                     <a class="nav-link" href="proteam.html">Pro Teams <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
-            </img>
+            </div>
         </nav>
     </header>
     <table>
