--- a/pokemon.html
+++ b/pokemon.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8">
     <title>Pokedex</title>
-    <meta name="description" content="Website for Will & Co. Cafe">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
@@ -30,7 +29,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="search.html">Pokedex</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
